--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import './src/styles/global.css'
+import '../styles/global.css'
 ---
 
 <!doctype html>
@@ -9,9 +9,9 @@ import './src/styles/global.css'
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>BrainRoad Labs</title>
 	</head>
-	<body>
+	<body class="flex justify-center items-center min-h-screen">
 		<slot />
 	</body>
 </html>
@@ -22,5 +22,9 @@ import './src/styles/global.css'
 		margin: 0;
 		width: 100%;
 		height: 100%;
+	}
+
+	body {
+		background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
 	}
 </style>
