--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -13,8 +13,10 @@
     p-[0.5px]
 ">
     <div class="content-container p-2">
-        <h1 class="text-2xl font-bold mb-2">BrainRoad Labs</h1>
-        <p>Bonjour je m'appelle Tomy Spagnoletti et j'aime les pizza et les burgers et les lasagnes mais vraiment par dessus tout les pizzas et donc je peux aussi dire que je suis un vrai italien en plus je vis à palerme en sicile.</p>
+        <!-- <h1 class="text-2xl font-bold mb-2">BrainRoad Labs</h1>
+        <p>
+            Bonjour je m'appelle Tomy Spagnoletti et j'aime les pizza et les burgers et les lasagnes mais vraiment par dessus tout les pizzas et donc je peux aussi dire que je suis un vrai italien en plus je vis à palerme en sicile. Bonjour je m'appelle Tomy Spagnoletti et j'aime les pizza et les burgers et les lasagnes mais vraiment par dessus tout les pizzas et donc je peux aussi dire que je suis un vrai italien en plus je vis à palerme en sicile. Bonjour je m'appelle Tomy Spagnoletti et j'aime les pizza et les burgers et les lasagnes mais vraiment par dessus tout les pizzas et donc je peux aussi dire que je suis un vrai italien en plus je vis à palerme en sicile. Bonjour je m'appelle Tomy Spagnoletti et j'aime les pizza et les burgers et les lasagnes mais vraiment par dessus tout les pizzas et donc je peux aussi dire que je suis un vrai italien en plus je vis à palerme en sicile. Bonjour je m'appelle Tomy Spagnoletti et j'aime les pizza et les burgers et les lasagnes mais vraiment par dessus tout les pizzas et donc je peux aussi dire que je suis un vrai italien en plus je vis à palerme en sicile. Bonjour je m'appelle Tomy Spagnoletti et j'aime les pizza et les burgers et les lasagnes mais vraiment par dessus tout les pizzas et donc je peux aussi dire que je suis un vrai italien en plus je vis à palerme en sicile.
+        </p> -->
     </div>
 </div>
 
@@ -27,15 +29,15 @@
         content: "";
         position: absolute;
         inset: 0;
-        border-radius: 20px; /* matches rounded-[20px] */
-        padding: 1px;
+        border-radius: var(--border-radius);
+        padding: 0.5px;
         background: linear-gradient(
             45deg, 
-            rgba(180, 240, 220, 1) 0%, 
-            rgba(120, 220, 200, 1) 25%, 
-            rgba(255, 180, 230, 1) 50%, 
-            rgba(240, 150, 210, 1) 75%, 
-            rgba(180, 180, 255, 1) 100%
+            rgba(var(--color1), 1) 0%, 
+            rgba(var(--color2), 1) 25%, 
+            rgba(var(--color3), 1) 50%, 
+            rgba(var(--color4), 1) 75%, 
+            rgba(var(--color5), 1) 100%
         );
         background-size: 200% 200%;
         animation: gradientBorder 8s ease infinite;
