--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,6 +23,10 @@ import '../styles/global.css'
 						<feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -8" result="goo" />
 						<feBlend in="SourceGraphic" in2="goo" />
 					</filter>
+					<filter id="paper-texture" x="0%" y="0%" width="100%" height="100%">
+						<feTurbulence type="fractalNoise" baseFrequency="0.8" numOctaves="4" result="noise" />
+						<feDisplacementMap in="SourceGraphic" in2="noise" scale="3" />
+					</filter>
 				</defs>
 			</svg>
 			<div class="gradients-container">
@@ -33,6 +37,7 @@ import '../styles/global.css'
 				<div class="g5"></div>
 				<div class="interactive"></div>
 			</div>
+			<div class="noise-overlay"></div>
 		</div>
 		
 		<div class="content-wrapper flex justify-center items-center min-h-screen p-[10px]">
