--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -1,8 +1,8 @@
 <div class="br_container">
     <div class="overflow-auto h-full p-5">
-        <div class="flex items-center justify-between mb-2">
-            <h1 class="text-xl">BrainRoad Labs</h1>
-            <div class="br_badge">
+        <div class="br_js_header-container flex flex-wrap items-center mb-2">
+            <h1 class="br_js_title text-xl">BrainRoad Labs</h1>
+            <div class="br_js_badge br_badge ml-auto">
                 <div class="br_badge_green"></div>
                 #OpenToWork
             </div>
@@ -20,12 +20,9 @@
 
 <style>
     
-
     /*
 
-        TODO: Responsive label
         TODO: Bliking animation in the label
-        TODO: Le label toujours en haut à gauche
 
         TODO: Splashscreen with logo
     
