--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,6 +15,11 @@ import '../styles/global.css'
 		<title>BrainRoad Labs</title>
 	</head>
 	<body>
+		<!-- Splash Screen -->
+		<div id="br_splash" class="br_splash">
+			<div class="br_splash_content">BR</div>
+		</div>
+		
 		<div class="gradient-bg">
 			<svg xmlns="http://www.w3.org/2000/svg">
 				<defs>
