Blocks Animation OK

--- a/src/components/Explanation.astro
+++ b/src/components/Explanation.astro
@@ -1,7 +1,7 @@
-<div class="br_container" style="--order: 7;">
+<div class="br_container" style="--order: 8;">
     <div class="overflow-auto h-full p-5">
         <div class="br_js_header-container flex flex-wrap items-center mb-2">
-            <h1 class="br_js_title text-xl">Contact</h1>
+            <h1 class="br_js_title text-xl">Explanation</h1>
             <div class="br_js_badge br_badge ml-auto">
                 <div class="br_badge_green"></div>
                 XXX
