--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -1,4 +1,4 @@
-<div class="br_container">
+<div class="br_container" style="--order: 1;">
     <div class="overflow-auto h-full p-5">
         <div class="br_js_header-container flex flex-wrap items-center mb-2">
             <h1 class="br_js_title text-xl">BrainRoad Labs</h1>
@@ -18,12 +18,8 @@
     </div>
 </div>
 
-<style>
-    
-    /*
+<!--
 
-        TODO: Splashscreen with logo (in progress)
-    
-    */
+    TODO: Splashscreen with logo (in progress)
 
-</style>
+-->
