--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,14 @@
 ---
-import Home from '../components/Home.astro';
 import Layout from '../layouts/Layout.astro';
+import Home from '../components/Home.astro';
+import Project from '../components/Project.astro';
+import Contact from '../components/Contact.astro';
+import Explanation from '../components/Explanation.astro';
 ---
 
 <Layout>
 	<Home />
+	<Project />
+	<Contact />
+	<Explanation />
 </Layout>
