Credits Page and other improvments

--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -1,5 +1,4 @@
 ---
-// Array of projects
 const projects = [
   {
     order: 2,
@@ -57,5 +56,6 @@ const projects = [
 <!--
 
   TODO: Il me faut une date
+  TODO: Remplir correctement
 
 -->
