--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Home from '../components/Home.astro';
 import Project from '../components/Project.astro';
 import Contact from '../components/Contact.astro';
 import Explanation from '../components/Explanation.astro';
+import Credits from '../components/Credits.astro';
 ---
 
 <Layout>
@@ -11,4 +12,5 @@ import Explanation from '../components/Explanation.astro';
 	<Project />
 	<Contact />
 	<Explanation />
+	<Credits />
 </Layout>
